# ImageSuite

./: CHANGELOG.md  ImageSuite.bat  ImageSuite.spec  README.md  RELEASE_CHECKLIST.md  app.py  dependency_check.py  installer.iss  pyproject.toml  release_check.py  requirements-ai.txt  requirements-test.txt  requirements.txt  version_info.txt
developer_tools/: build_exe.bat  build_exe_ai.bat  build_installer.bat  build_release.bat  publish_to_github.bat
imagesuite/: __init__.py  diagnostics.py  jobs.py  main_window.py  models.py  single_instance.py  theme.py  updater.py  utils.py
imagesuite/editor/: __init__.py  canvas.py  effects.py  timeline.py  workspace.py
imagesuite/similarity/: __init__.py  engine.py  workspace.py
imagesuite/upscale/: __init__.py  engine.py  workspace.py
tests/: test_animation_io.py  test_annotations.py  test_diagnostics.py  test_engines.py  test_launchers.py  test_live_preview.py  test_navigation.py  test_ui_smoke.py  test_updater.py  test_workflows.py
